# canvassr_decryption_manager

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  decryption_manager.spec  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-test.yml  release-binaries.yml
scripts/: build_linux.sh  build_windows.ps1
src/canvassr_decryption_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/decryption_manager/: __main__.py  auth.py  cli.py  gpg_adapter.py  io_utils.py  key_vault.py  platform_open.py  transform.py
tests/: campaign_cerebra-charity-campaign_export_20260429_194234.csv  test_auth_and_vault.py  test_cli_decrypt_e2e.py  test_cli_menu_flow.py  test_cli_selection.py  test_test_charity_campaign_csv_decrypt.py  test_transform.py
