[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvassr-decryption-manager"
version = "0.1.0"
description = "CLI tool for decrypting Canvassr encrypted CSV exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
decryption-manager = "decryption_manager.cli:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
